Trying to fix unequal size cards (too large section Mr Captain and Technogym)

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -48,6 +48,10 @@ img.limit-height-lg {
 
 .card .card-content {
   min-height: 175px;
+  max-height: 127px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card-action {
